<resources>
    <string name="app_name">Converter</string>
    <string name="conversion">Conversion:</string>
    <string name="miles_value">Miles Value:</string>
    <string name="convert">Convert</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="input_value"><![CDATA[< Input Value >]]></string>
    <string name="conversion_history">Conversion History:</string>
    <string name="kilometers_value">Kilometers Value:</string>
    <string name="clear">Clear</string>
</resources>