<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="none|numberSigned|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/inputText"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kilometers_value"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputText2"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:text="@string/conversion"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/miles_value"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputText"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="none|numberSigned|numberDecimal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Radio1" />

    <Button
        android:id="@+id/button"
        android:layout_width="339dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:onClick="onPress"
        android:text="@string/convert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText" />

    <TextView
        android:id="@+id/outputField"
        android:layout_width="0dp"
        android:layout_height="113dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorButtonNormal"
        android:scrollbars="vertical"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/inputText2"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RadioGroup
        android:id="@+id/Radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:checkedButton="@id/radioButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="switchMilesView"
            android:text="@string/miles" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="switchKiloView"
            android:text="@string/kilometers" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/conversion_history"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/button2"
        android:layout_width="320dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:onClick="clearClick"
        android:text="@string/clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputField" />

</androidx.constraintlayout.widget.ConstraintLayout>